--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "styrene",
-  "version": "0.1.3",
-  "description": "Minimalist HTTP Server",
+  "version": "0.2.0",
+  "description": "Minimalist HTTP Server w/ path listeners",
   "main": "src/index.js",
   "keywords": [
     "http"
